# AlgoStore_DAA

./: .dockerignore  .env.example  .gitignore  ONBOARDING.md  PIPELINE_GUIDE.md  README.md  STARTUP.md  TEST_GUIDE.md  healthcheck.py  index1.html  main.py  pyproject.toml  test_pipeline_output.txt
app/api/: config.py  deps.py  main.py
app/api/routes/: analysis.py  images.py  jobs.py
app/api/schemas/: analysis.py  image.py  job.py
app/config/: config.py
app/core/: compression.py  exact_hash.py  phash.py  similarity.py
app/database/: connection.py  models.py  session.py  setup.md
app/database/repositories/: images.py  jobs.py  results.py
app/services/: analysis_service.py  job_service.py  retrieval_service.py  storage_service.py  upload_service.py
app/tests/: 70e00390403d_3a142cea2e784207a69fbbcda17ab56c_compressed.json  test_compression.py  test_minio.py  test_pipeline.py  test_redis_connection.py
app/utils/: __init__.py  heap.py  image_io.py  rle.py
app/worker/: __init__.py  celery_app.py  profiler_task.py  tasks.py
docker/: docker-compose.yml
docs/: brainstorm.md  compression-migration.md  week-1.md  week-2.md  week-3.md
docs/algo-explain/: huffman.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css  main.tsx  mockData.ts  store.ts  types.ts
frontend/src/api/: hooks.ts
frontend/src/components/: Column1.tsx  Column2.tsx  Column3.tsx  Header.tsx
frontend/src/components/steps/: Step1Padded.tsx  Step2DCT.tsx  Step3QMatrix.tsx  Step4Quantized.tsx  (+5 more)
frontend/src/utils/: colormap.ts
